# shell-sistemasoperativos

./: CMakeCache.txt  CMakeLists.txt  Limpiar_stdin.h  Makefile  README.md  Shell_v2  cmake_install.cmake  comandos.c  comandos.h  customCom.c  customCom.h  favoritos.c  favoritos.h  favs.c  favs.h  main  main.c  shell_utils.h  signals.c  signals.h
